Moved the bpmn files.  Updated the UI.  Added a new GH based workflow.
